app/assets/stylesheets/modules/master_overlay.css.scss
// The main search page has a master-detail type view, where both master and
// detail lay on top of the map.  This module describes the master overlay.


// The container for the entire overlay
.master-overlay {
  color: #fff;

  a {
    color: #fff;
  }

  // Non-scrollable header area
  header {
    margin: 1em 1em 0;
    color: $overlay-heading-font-color;

    h2 {
      font-size: 1.2em;
      margin: 0;
    }

    &.with-options {
      margin: .4em 1em .4em 1em;

      h2 {
        display: inline-block;
        padding: 10px 0 0 0;
      }

      .actions {
        float: right;
      }
    }
  }
}

.master-overlay-nav {
  padding: 1em;
  border-bottom: 1px solid #333;
}

// A parent panel for the overlday.  For instance, dataset facets are a parent
// panel to dataset search results
.master-overlay-parent {
  // background-color: $master-overlay-parent-bg-color;
  @include retina-image(denim, 145px 145px, png, null, true);
  width: 20%;
  left: 0;
}

// The main section in the overlay.  Dataset results, pinned datasets, whatnot.
.master-overlay-main {
  background-color: $master-overlay-main-bg-color;
  width: 40%;
  min-width: 35em;
  left: 20%;
  overflow: hidden;
}

// The secondary section in the overlay. Granule filters
.master-overlay-secondary {
  background-color: $master-overlay-main-bg-color;
  width: 60%;
  right: 0%;
  overflow: hidden;
  z-index: 60;
  position: absolute;
  height: 100%;
  transition-property: right;
  transition-duration: 0.3s;
}

.master-overlay-main-content {
  width: 400%;
  left: 0%;

  section {
    height: 100%;
    width: 25%;
    float: left;
    position: relative;
  }

  dl {
    margin: 0;
    font-size: .8em;
  }

  .tab-content {
    padding-bottom: 0;
  }
}

.master-overlay-main-right {
  width: 50%;
  left: 40%;
  float: left;
}

.master-overlay-parent, .master-overlay-main, .master-overlay-main-content {
  z-index: 60;
  position: absolute;
  height: 100%;
  transition-property: left;
  transition-duration: 0.3s;
}

.master-overlay-minimized {
  position: absolute;
  left: 1em;
  top: 1em;
  z-index: 50;
  opacity: 0;
  @include transition(opacity 0.3s ease-in-out);
}

.is-hidden .master-overlay-minimized {
  opacity: 1;
}

.master-overlay-info {
  margin: 0;
  color: $overlay-heading-font-color;

  p {
    margin: 1em;
  }

  p.button-details {
    span {
      display: block;
      position: relative;
      top: 50%;
      -ms-transform: translateY(-50%);
      -webkit-transform: translateY(-50%);
      transform: translateY(-50%);
    }
    height: 36px;
  }

  .button {
    @include dark-button;
    float: right;
    font-style: normal;
    line-height: 1.428571429em; // Bootstrap value.  Weird.

    &.low-priority {
      box-shadow: none;
      text-shadow: none;
      @include light-button;
    }
  }

  em {
    font-weight: bold;
  }
}

#dataset-results .master-overlay-info {
  height: 71px;
}

.master-overlay-global-actions {
  padding: .5em;
  text-align: right;
  border: 1px solid transparent;
  border-radius: 3px;

  .button {
    @include light-button;
    padding: 6px 6px;
  }
}

.master-overlay-forward {
  cursor: pointer;
}

#project-datasets-list {
  margin-top: 0;
}

// Scrollable content area
.master-overlay-content {
  padding: 0 1em;
  height: 80%;
  overflow-y: scroll;
}

.master-overlay-close {
  position: absolute;
  right: 1em;
  top: 1em;
  display: block;
}

// DELETE ME After icons are added for close button
a.master-overlay-close {
  color: rgba(255, 255, 255, .3);
  @include transition (color 0.15s ease-in-out);
}

.master-overlay-when-parent-hidden {
  display: none;
}

.is-master-overlay-parent-hidden .master-overlay-when-parent-hidden {
  display: block;
}

.is-master-overlay-parent-hidden {
  .master-overlay-parent { left:-20%; }
  .master-overlay-main   { left:0%; }
}

.is-master-overlay-secondary-hidden {
  .master-overlay-secondary { right: -60%; }
}

.master-overlay-main-content {
  &[data-level="1"] { left:-100%; }
  &[data-level="2"] { left:-200%; }
  &[data-level="3"] { left:-300%; }
  &[data-level="4"] { left:-400%; }
}

.is-hidden {
  .master-overlay-parent { left:-60%; }
  .master-overlay-main   { left: -40%; }
  .master-overlay-secondary { right: -60%; }
}

.master-overlay-help p {
  margin-bottom: 1em;
}

